--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,11 @@
     <artifactId>mx-spring-exercise</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.3.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
